AV-412 Fixing ie11 sticky footer issues
- Sticky footer was overlapping on content with IE11. Removal of height
value fixes this overlapping issue, but removes sticky footer
functionality on IE11. On other browsers sticky footer should work just
fine still.

--- a/modules/avoindata-drupal-theme/less/overrides.less
+++ b/modules/avoindata-drupal-theme/less/overrides.less
@@ -53,8 +53,6 @@ body, html {
   .flex-display(flex);
   .flex-direction(column);
   min-height: 100vh;
-  // https://github.com/philipwalton/flexbugs#workaround-2
-  height: 100vh;
 
   .region.region-footer {
     margin: auto 0 0 0;
